refactor(sync): 替换 HTTP 客户端实现
- 移除 Apache HttpClient 依赖，改用原生 HttpURLConnection
- 重构 sendGet 方法，使用 URL 和 HttpURLConnection 实现 GET 请求
- 重构 sendPost 方法，使用 URL 和 HttpURLConnection 实现 POST 请求
- 添加请求超时设置（连接超时和读取超时均为 5 秒）
- 改进错误处理机制，对响应码进行检查并返回相应结果
- 添加资源清理，在 finally 块中断开连接
- 更新方法参数命名，提高代码可读性